<resources>
    <string name="app_name">SportMatch</string>
    <string name="account">Account  : </string>
    <string name="password">Password : </string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="hint_account">Please key the account.</string>
    <string name="hint_password">Please key the password.</string>
<string name = "level_init">Level 0</string>
    <string name = "username">Username   :</string>
    <string name = "birthday">Birthday   :</string>
    <string name = "interest">Love Sport :</string>
    <string name="friends_num">Friends :</string>
    <string name="rank">Avg Rank :</string>
    <string name="search_sport">Search Sport</string>
    <string name="po_sport">Po Sport</string>

</resources>
